# EPP-Server-for-.AE-Domain-Registry

./: .env.example  .gitignore  INSTALL.md  PROGRESS.md  README.md  requirements.txt
.github/workflows/: build-rpm.yml
client/: .gitignore  EPP_CLIENT_TOOLKIT_PLAN.md  LICENSE  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  setup.py
client/config/: sample_config.yaml
client/examples/: async_example.py  basic_usage.py  domain_operations.py
client/src/epp_cli/: __init__.py  config.py  main.py  output.py
client/src/epp_client/: __init__.py  async_client.py  client.py  connection.py  exceptions.py  framing.py  models.py  pool.py  xml_builder.py  xml_parser.py
client/tests/: __init__.py  mock_server.py  test_all_commands.py  test_framing.py  test_full_commands.py  test_integration.py  test_live.py  test_xml_builder.py  test_xml_parser.py
config/: epp-test.yaml  epp.yaml  logging.yaml
docs/: GETTING_STARTED.md  MISSING_FEATURES_PLAN.md  PROGRESS.md  phase7_11_schema.sql
packaging/: build_rpm.sh  build_tarball.sh  epp-server.spec
scripts/: diagnose_domain.py  generate_certs.sh  test_poll.py
src/: __init__.py  server.py
src/commands/: __init__.py  base.py  contact.py  domain.py  host.py  session.py
src/commands/extensions/: __init__.py  ae_extension.py  ar_extension.py  au_extension.py
src/core/: __init__.py  frame_handler.py  session_manager.py  tls_handler.py  xml_processor.py
src/database/: __init__.py  connection.py  models.py  plsql_caller.py
src/database/repositories/: __init__.py  account_repo.py  contact_repo.py  domain_repo.py  (+3 more)
src/utils/: __init__.py  password_utils.py  rate_limiter.py  response_builder.py  roid_generator.py
src/validators/: __init__.py  epp_validator.py
systemd/: epp-server.service
tests/: epp_test_suite.py  test_local.py
